@@ -1,2 +1,1 @@
 - Tighten up the configuration mechanism.
-- Move rails plugin up to root (requires loading plugin either from somewhere other than vendor/plugins or from a shim plugin in that directory)
